@@ -20,6 +20,8 @@
 - interpolators use type introspection
 - added vips --list classes, does formats too
 - include sys/param.h to get PATH_MAX in more places
+- VIPS_INTERPOLATE_SHIFT bumped to 12, we need the extra precision for u16 gel
+  data
 
 11/9/08 started 7.16.3
 - oop typo in manpage for im_project()
